--- a/etc/systemd/system/evtest-grab@.service
+++ b/etc/systemd/system/evtest-grab@.service
@@ -1,3 +1,3 @@
 [Service]
-ExecStart="/bin/evtest --grab /dev/input/%i"
+ExecStart=sh -c '/bin/evtest --grab /dev/input/%i >/dev/null 2>&1'
 Restart=always
