--- a/etc/dracut.conf.d/cmdline.conf
+++ b/etc/dracut.conf.d/cmdline.conf
@@ -1,2 +1,4 @@
-hostonly_cmdline="no"
-kernel_cmdline="root=UUID=0f55fd00-cc34-4e84-a042-3aa503c7f936 resume=UUID=b711a79b-9aa9-4fbd-8e5b-ac3a5aa03ad2 rw bgrt_disable quiet loglevel=3"
+# quiet loglevel=3 := Silent boot
+# bgrt_disable := Do not display the OEM logo after loading the ACPI tables.
+# lsm=landlock,lockdown,yama,integrity,apparmor,bpf := Enable AppArmor
+kernel_cmdline="root=UUID=0f55fd00-cc34-4e84-a042-3aa503c7f936 resume=UUID=b711a79b-9aa9-4fbd-8e5b-ac3a5aa03ad2 rw bgrt_disable quiet loglevel=3 lsm=landlock,lockdown,yama,integrity,apparmor,bpf"
