--- a/etc/dracut.conf.d/main.conf
+++ b/etc/dracut.conf.d/main.conf
@@ -4,3 +4,7 @@ compress="zstd"
 
 uefi="yes"
 uefi_splash_image="/usr/share/systemd/bootctl/splash-arch.bmp"
+
+# Run 'sbctl create-keys' to create a set of secure boot signing keys.
+uefi_secureboot_key="/usr/share/secureboot/keys/db/db.key"
+uefi_secureboot_cert="/usr/share/secureboot/keys/db/db.pem"
