modified:   README-arch-install.md 	modified:   README.md 	modified:   bin/update-mirrorlist.sh 	modified:   dotfiles-install.sh 	new file:   etc/autofs/auto.drive 	new file:   etc/autofs/auto.master.d/extra.autofs 	new file:   etc/autofs/auto.ssh 	modified:   etc/dracut.conf.d/cmdline.conf 	deleted:    etc/libvirt/libvirtd.conf 	new file:   etc/nftables.conf 	new file:   etc/pacman.d/hooks/90-dracut-install.hook 	new file:   etc/sudoers.d/wheel 	new file:   install-cpu-microcode.sh 	modified:   install.sh 	modified:   packages.txt 	new file:   set-timezone.sh

--- a/etc/dracut.conf.d/cmdline.conf
+++ b/etc/dracut.conf.d/cmdline.conf
@@ -1,4 +1,5 @@
-# quiet loglevel=3 := Silent boot
-# bgrt_disable := Do not display the OEM logo after loading the ACPI tables.
+# The root and swap partition must be labeled "SYSTEM" and "SWAP", respectively.
 # lsm=landlock,lockdown,yama,integrity,apparmor,bpf := Enable AppArmor
-kernel_cmdline="root=UUID=0f55fd00-cc34-4e84-a042-3aa503c7f936 resume=UUID=b711a79b-9aa9-4fbd-8e5b-ac3a5aa03ad2 rw bgrt_disable quiet loglevel=3 lsm=landlock,lockdown,yama,integrity,apparmor,bpf"
+# bgrt_disable := Do not display the OEM logo after loading the ACPI tables.
+# quiet loglevel=3 := Silent boot
+kernel_cmdline="root=LABEL=SYSTEM resume=LABEL=SWAP rw bgrt_disable quiet loglevel=3 lsm=landlock,lockdown,yama,integrity,apparmor,bpf"
