--- a/etc/systemd/user/emanote.service
+++ b/etc/systemd/user/emanote.service
@@ -5,7 +5,7 @@ PartOf=graphical-session.target
 
 [Service]
 ExecStart="%S/nix/profile/bin/emanote" \
-	--layers "%h/Documents/Notes" \
+	--layers "%h/Documents/kenrendell-wiki" \
 	run --host 127.0.0.1 --port 9000
 
 [Install]
